<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.example.psychotip.SettingsActivity$ProfilePreferenceFragment"
        android:icon="@drawable/ic_person_grey_24dp"
        android:title="@string/pref_header_account" />

    <header
        android:fragment="com.example.psychotip.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_grey_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.example.psychotip.SettingsActivity$InformationPreferenceFragment"
        android:icon="@drawable/ic_info_grey_24dp"
        android:title="@string/pref_header_information" />


</preference-headers>
